# gp-script-writer-backend

./: .gitignore  Dockerfile  alembic.ini  main.py  package-lock.json  pyproject-for-prod.toml  pyproject.toml  test_azure_file_upload.py  work-flow.txt
.github/workflows/: deploy_to_azure.yml
ai/: parse_scene_html_files.py
alembic-migration/: env.py
alembic-migration/versions/: 04464ed11e26_auto_generating_schema.py  04fb7891b7bb_added_script_notes_test.py  5afd85bfe62d_added_projects_timestamp.py  5ec15abee07b_added_script_notes_test3.py  68b698b0783b_migration2.py  73bbbdd7046e_added_columns_for_google_sso1.py  775c14ecbcdb_added_script_drafts.py  7ec584d9947b_adding_token_blacklist.py  853a19692c30_added_columns_for_google_sso.py  8691ea8c7b9a_added_projects.py  877daf0806ff_created_at_to_blacklistedtoken.py  b36058ce5256_added_projects_timestamp.py  ba04ba7d4202_first_migration.py  db96279c3d99_added_script_notes_test2.py  e06f24450962_adding_a_change_in_script_ai_table.py  e7d69ca07be8_updatenow_and_logline.py  eb6c56f95dfa_adding_beatsheet_id_table_for_tasking_ai.py  effd6ca68f54_added_script_notes.py
alembic-process-command/: command_and_workflow.txt
api/: gp_ai_tasking_ai.py  logging_module.py  projects_api.py  scene_text_parser.py  script_versions_api.py  scripts_api.py  users_api.py
api/api_utils/: ai_utils.py  project_utils.py  script_utils.py  (+2 more)
db_models/: db_setup.py
db_supplement_files/: alembic copy.ini
pydantic_schemas/: generic_pydantic_models.py  script_pydantic_models.py  script_version_pydantic_models.py  user_pydantic_models.py
(+5 files in other folders)
